2.x
-----

- #446: (infrastructure) Travis CI tests for tox now also run on OS X now.
  Thanks Jason R. Coombs (@jaraco).

2.6.0
-----

- add "alwayscopy" config option to instruct virtualenv to always copy
  files instead of symlinking. Thanks Igor Duarte Cardoso (@igordcard).

- pass setenv variables to setup.py during a usedevelop install.
  Thanks Eli Collins (@eli-collins).

- replace all references to testrun.org with readthedocs ones.
  Thanks Oliver Bestwalter (@obestwalter).

- fix #323 by avoiding virtualenv14 is not used on py32
  (although we don't officially support py32).
  Thanks Jason R. Coombs (@jaraco).

- add Python 3.6 to envlist and CI.
  Thanks Andrii Soldatenko (@andriisoldatenko).

- fix glob resolution from TOX_TESTENV_PASSENV env variable
  Thanks Allan Feldman (@a-feld).

2.5.0
-----

- slightly backward incompatible: fix issue310: the {posargs} substitution 
  now properly preserves the tox command line positional arguments. Positional 
  arguments with spaces are now properly handled.
  NOTE: if your tox invocation previously used extra quoting for positional arguments to
  work around issue310, you need to remove the quoting. Example:
  tox -- "'some string'"  # has to now be written simply as 
  tox -- "some string"
  thanks holger krekel.  You can set ``minversion = 2.5.0`` in the ``[tox]`` 
  section of ``tox.ini`` to make sure people using your tox.ini use the correct version.

- fix #359: add COMSPEC to default passenv on windows.  Thanks
  @anthrotype.

- add support for py36 and py37 and add py36-dev and py37(nightly) to
  travis builds of tox. Thanks John Vandenberg.

- fix #348: add py2 and py3 as default environments pointing to
  "python2" and "python3" basepython executables.  Also fix #347 by 
  updating the list of default envs in the tox basic example.
  Thanks Tobias McNulty.

- make "-h" and "--help-ini" options work even if there is no tox.ini,
  thanks holger krekel.
